fix contraste error

--- a/styles/form.css
+++ b/styles/form.css
@@ -42,7 +42,7 @@
 body {
     font-family: var(--font-family);
     font-weight: var(--font-weight-regular);
-    background-color: var(--background-color);
+    background-color: var(--accent3-color-platinum);
     color: var(--text-color);
     padding: 20px;
 }
@@ -52,6 +52,7 @@ header {
     margin-bottom: 20px;
     background-color: var(--headline-color-on-white);
     color: var(--background-color);
+    font-size: 14px;
 }
 
 form {
@@ -71,7 +72,7 @@ label {
     display: inline;
     margin-bottom: 8px;
     font-weight: bold;
-    color: var(--primary-color);
+    color: var(--primary-color-rich-black);
 }
 
 select,
@@ -98,17 +99,23 @@ legend {
     font-weight: bold;
     color: var(--primary-color);
     margin-bottom: 8px;
+    color: var(--primary-color-rich-black);
 }
 
 input[type="radio"],
 input[type="checkbox"] {
     width: auto;
     margin-right: 8px;
+    
+}
+
+.features {
+    font-size: 14px;
 }
 
 input[type="submit"] {
-    background-color: var(--primary-color);
-    color: #fff;
+    background-color: var(--primary-color-rich-black);
+    color: var(--accent3-color-platinum);
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
@@ -145,8 +152,9 @@ textarea {
 }
 
 .rating-box label {
-    color: grey;
+    color: var(--accent2-color-silverlake-blue);
     font-size: 2rem;
+    border-radius: 1px solid var(--primary-color-rich-black);
 }
 
 .rating-box .clasificacion {
